--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
       </div>
       <div class='row'>
         <div class="span6 offset4">
-        <h1>Foo</h1>
+        <h1>about</h1>
         </div>
       </div>
       <hr>
