added hello world tutorial

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       }
     </style>
     <link href="/stylesheets/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/stylesheets/github.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -58,7 +59,7 @@
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
       <div class='row'>
-        <div class="span6 offset4">
+        <div class="span8 offset2 github">
         <h1>about</h1>
         </div>
       </div>
