--- a/about.html
+++ b/about.html
@@ -59,7 +59,15 @@
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
       <div class='row'>
-        <div class="span8 offset2 github">
+        <div class="span4">
+          <div class="hero-unit">
+            <ul>
+              <li><a href="#hello-world">Hello World</a></li>
+              <li><a href="#npm">NPM</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span8 github">
         <h1>about</h1>
         </div>
       </div>
