--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <ul>
               <li><a href="#hello-world">Hello World</a></li>
               <li><a href="#npm">NPM</a></li>
+              <li><a href="#http.client">http.client</a></li>
             </ul>
           </div>
         </div>
