--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul>
               <li><a href="#hello-world">Hello World</a></li>
               <li><a href="#npm">NPM</a></li>
-              <li><a href="#http.client">http.client</a></li>
+              <li><a href="#httpclient">http.client</a></li>
             </ul>
           </div>
         </div>
@@ -227,7 +227,7 @@ What versions of node does it run on?
 
 <hr />
 
-<p><a id="npm" style="padding-bottom:60px;" href="/">Top</a></p>
+<p><a id="httpclient" style="padding-bottom:60px;" href="/">Top</a></p>
 
 <h1>http.request</h1>
 
