--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <ul>
               <li><a href="#hello-world">Hello World</a></li>
               <li><a href="#npm">NPM</a></li>
-              <li><a href="#http.client">http.client</a></li>
+              <li><a href="#httpclient">http.client</a></li>
             </ul>
           </div>
         </div>
